[solar] fixed key too long in details

--- a/solar/style/less/elements/summary.less
+++ b/solar/style/less/elements/summary.less
@@ -84,7 +84,7 @@
         .value {
             font-weight: 500;
             margin-right: 1ch;
-            width: 13ch;
+            width: 15ch;
             text-align: right;
             flex-shrink: 0;
         }
